[package]
name = "project_test"
version = "0.1.0"
authors = ["JonasLeonhard <jonasleonhardfl@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The Rust programming language book chapters with a simple cli to call chapter examples."

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# run cargo clippy for code suggestions
[dependencies]
rand = "0.7.3"
